[metadata]
name = pysort
version = 0.0.1
author = RESPULTE
author_email = yeapzing@gmail.com
description = a binary tree package for general purpose
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RESPULTE/Pysort
project_urls =
    Bug Tracker = https://github.com/RESPULTE/Pysort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src